proptest-macro/src/property_test/tests/snapshots/proptest_macro__property_test__tests__snapshot_tests__mix_custom_and_default_strategies.snap
---
source: proptest-macro/src/property_test/tests/snapshot_tests.rs
expression: formatted
---
#[test]
fn foo() -> ::proptest::strict::TestResult {
    #[derive(Debug)]
    struct FooArgs {
        x: i32,
        y: String,
    }
    impl ::proptest::prelude::Arbitrary for FooArgs {
        type Parameters = ();
        type Strategy = ::proptest::strategy::BoxedStrategy<Self>;
        fn arbitrary_with((): Self::Parameters) -> Self::Strategy {
            use ::proptest::strategy::Strategy;
            (::proptest::prelude::any::<i32>(), a + more()("complex") - expression!())
                .prop_map(|(x, y)| Self { x, y })
                .boxed()
        }
    }
    let strategy = ::proptest::strategy::Strategy::prop_map(
        ::proptest::prelude::any::<FooArgs>(),
        |values| ::proptest::sugar::NamedArguments(stringify!(FooArgs), values),
    );
    ::proptest::strict::ensure_property(
        &strategy,
        concat!(module_path!(), "::", stringify!(foo)),
        |::proptest::sugar::NamedArguments(_, FooArgs { x, y })| {
            let _ = (x, y);
            Ok(())
        },
    )
}
